plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/steps/affected-files/javalog-1.txt
FingerprintITest.java:6: error: cannot find symbol
        System.out.println(m);
                           ^
  symbol:   variable m
  location: class FingerprintITest
